// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConditionalExecution matches snapshot when no data 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <div
      class="StyledProps--font StyledProps--main"
      style="width: 846px;"
    >
      <div
        class="main"
      >
        <div
          class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-justifyContent-space-between StyledProps--flex-alignItems-center"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey700 StyledProps--font-size-small"
          >
            pipeline.conditionalExecution.subTitle
             
            <a
              class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--color StyledProps--color-blue400 StyledProps--font StyledProps--font-size-small Button--with-current-color Button--link"
              href="https://docs.harness.io/article/i36ibenkq2-step-skip-condition-settings"
              rel="noreferrer noopener"
              role="button"
              tabindex="0"
              target="_blank"
            >
              <span
                class="bp3-button-text"
              >
                pipeline.createPipeline.learnMore
              </span>
            </a>
          </p>
          <button
            class="bp3-button bp3-disabled Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--withLeftIcon Button--variation Button--variation-icon"
            data-testid="delete"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              class="bp3-icon StyledProps--main"
              data-icon="main-trash"
            >
              <svg
                height="16"
                viewBox="0 0 16 20"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M1.143 8.48a1.2 1.2 0 011.189-1.36h10.649a1.2 1.2 0 011.194 1.321l-1.039 10.208a1.2 1.2 0 01-1.193 1.079H3.716a1.2 1.2 0 01-1.189-1.04L1.143 8.48zm11.837-.16H2.332l1.385 10.207h8.226L12.98 8.32zM5.916 1.594a.6.6 0 01.719-.452l4.224.965a.6.6 0 01.452.719L11 4.179l3.86.882a.6.6 0 01-.267 1.17L1.535 3.248a.6.6 0 11.267-1.17l3.805.87.309-1.354zm.86 1.62l3.056.698.175-.768-3.055-.698-.175.768z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
                <path
                  clip-rule="evenodd"
                  d="M8 10.808a.5.5 0 01.5.5v5a.5.5 0 01-1 0v-5a.5.5 0 01.5-.5zm-2.761.012a.5.5 0 01.541.454l.436 4.981a.5.5 0 11-.996.087l-.436-4.98a.5.5 0 01.455-.542zM10.762 10.82a.5.5 0 01.455.541l-.436 4.981a.5.5 0 11-.996-.087l.435-4.98a.5.5 0 01.542-.455z"
                  fill="currentColor"
                  fill-rule="evenodd"
                  opacity="0.3"
                />
              </svg>
            </span>
          </button>
        </div>
        <div
          class="panel"
        >
          <div>
            <label
              class="bp3-control bp3-radio blackText"
            >
              <input
                name="Blueprint3.RadioGroup-0"
                type="radio"
                value="Success"
              />
              <span
                class="bp3-control-indicator"
              />
              pipeline.conditionalExecution.statusOption.success
            </label>
            <br />
            <label
              class="bp3-control bp3-radio blackText"
            >
              <input
                name="Blueprint3.RadioGroup-0"
                type="radio"
                value="All"
              />
              <span
                class="bp3-control-indicator"
              />
              pipeline.conditionalExecution.statusOption.all
            </label>
            <br />
            <label
              class="bp3-control bp3-radio blackText"
            >
              <input
                name="Blueprint3.RadioGroup-0"
                type="radio"
                value="Failure"
              />
              <span
                class="bp3-control-indicator"
              />
              pipeline.conditionalExecution.statusOption.failure
            </label>
          </div>
          <div
            class="divider"
          />
          <div>
            <label
              class="bp3-control bp3-checkbox blackText"
            >
              <input
                name="enableJEXL"
                type="checkbox"
              />
              <span
                class="bp3-control-indicator"
              />
              <span
                data-tooltip-id="conditionalExecution"
              >
                pipeline.conditionalExecution.condition
              </span>
            </label>
            <div
              class="StyledProps--font StyledProps--main StyledProps--padding-top-small StyledProps--padding-left-large"
            >
              <div
                class="StyledProps--font StyledProps--main conditionInputContainer"
              >
                <div
                  class="Layout--horizontal StyledProps--main MultiTypeInput--main"
                  style="flex-grow: 1;"
                >
                  <div
                    class="StyledProps--font StyledProps--main"
                    style="flex-grow: 1;"
                  >
                    <div
                      class="main disabled"
                    >
                      <textarea
                        name="when.condition"
                      />
                    </div>
                  </div>
                  <span
                    class="bp3-popover-wrapper MultiTypeInput--wrapper"
                  >
                    <span
                      class="bp3-popover-target"
                    >
                      <button
                        class="MultiTypeInput--btn MultiTypeInput--FIXED multiButtonForFixedType"
                        data-testid="multi-type-button"
                      >
                        <span
                          class="bp3-icon StyledProps--main"
                          data-icon="fixed-input"
                        >
                          <svg
                            height="12"
                            viewBox="0 0 9 9"
                            width="12"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                              fill="currentColor"
                            />
                          </svg>
                        </span>
                      </button>
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ConditionalExecution matches snapshot with data 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <div
      class="StyledProps--font StyledProps--main"
      style="width: 846px;"
    >
      <div
        class="main"
      >
        <div
          class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-justifyContent-space-between StyledProps--flex-alignItems-center"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey700 StyledProps--font-size-small"
          >
            pipeline.conditionalExecution.subTitle
             
            <a
              class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--color StyledProps--color-blue400 StyledProps--font StyledProps--font-size-small Button--with-current-color Button--link"
              href="https://docs.harness.io/article/i36ibenkq2-step-skip-condition-settings"
              rel="noreferrer noopener"
              role="button"
              tabindex="0"
              target="_blank"
            >
              <span
                class="bp3-button-text"
              >
                pipeline.createPipeline.learnMore
              </span>
            </a>
          </p>
          <button
            class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--withLeftIcon Button--variation Button--variation-icon"
            data-testid="delete"
            type="button"
          >
            <span
              class="bp3-icon StyledProps--main"
              data-icon="main-trash"
            >
              <svg
                height="16"
                viewBox="0 0 16 20"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M1.143 8.48a1.2 1.2 0 011.189-1.36h10.649a1.2 1.2 0 011.194 1.321l-1.039 10.208a1.2 1.2 0 01-1.193 1.079H3.716a1.2 1.2 0 01-1.189-1.04L1.143 8.48zm11.837-.16H2.332l1.385 10.207h8.226L12.98 8.32zM5.916 1.594a.6.6 0 01.719-.452l4.224.965a.6.6 0 01.452.719L11 4.179l3.86.882a.6.6 0 01-.267 1.17L1.535 3.248a.6.6 0 11.267-1.17l3.805.87.309-1.354zm.86 1.62l3.056.698.175-.768-3.055-.698-.175.768z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
                <path
                  clip-rule="evenodd"
                  d="M8 10.808a.5.5 0 01.5.5v5a.5.5 0 01-1 0v-5a.5.5 0 01.5-.5zm-2.761.012a.5.5 0 01.541.454l.436 4.981a.5.5 0 11-.996.087l-.436-4.98a.5.5 0 01.455-.542zM10.762 10.82a.5.5 0 01.455.541l-.436 4.981a.5.5 0 11-.996-.087l.435-4.98a.5.5 0 01.542-.455z"
                  fill="currentColor"
                  fill-rule="evenodd"
                  opacity="0.3"
                />
              </svg>
            </span>
          </button>
        </div>
        <div
          class="panel"
        >
          <div>
            <label
              class="bp3-control bp3-radio blackText active"
            >
              <input
                checked=""
                name="Blueprint3.RadioGroup-1"
                type="radio"
                value="Success"
              />
              <span
                class="bp3-control-indicator"
              />
              pipeline.conditionalExecution.statusOption.success
            </label>
            <br />
            <label
              class="bp3-control bp3-radio blackText"
            >
              <input
                name="Blueprint3.RadioGroup-1"
                type="radio"
                value="All"
              />
              <span
                class="bp3-control-indicator"
              />
              pipeline.conditionalExecution.statusOption.all
            </label>
            <br />
            <label
              class="bp3-control bp3-radio blackText"
            >
              <input
                name="Blueprint3.RadioGroup-1"
                type="radio"
                value="Failure"
              />
              <span
                class="bp3-control-indicator"
              />
              pipeline.conditionalExecution.statusOption.failure
            </label>
          </div>
          <div
            class="divider"
          />
          <div>
            <label
              class="bp3-control bp3-checkbox blackText active"
            >
              <input
                checked=""
                name="enableJEXL"
                type="checkbox"
              />
              <span
                class="bp3-control-indicator"
              />
              <span
                data-tooltip-id="conditionalExecution"
              >
                pipeline.conditionalExecution.condition
              </span>
            </label>
            <div
              class="StyledProps--font StyledProps--main StyledProps--padding-top-small StyledProps--padding-left-large"
            >
              <div
                class="StyledProps--font StyledProps--main conditionInputContainer"
              >
                <div
                  class="Layout--horizontal StyledProps--main MultiTypeInput--main"
                  style="flex-grow: 1;"
                >
                  <div
                    class="StyledProps--font StyledProps--main"
                    style="flex-grow: 1;"
                  >
                    <div
                      class="main"
                    >
                      <textarea
                        name="when.condition"
                      >
                        some condition
                      </textarea>
                    </div>
                  </div>
                  <span
                    class="bp3-popover-wrapper MultiTypeInput--wrapper"
                  >
                    <span
                      class="bp3-popover-target"
                    >
                      <button
                        class="MultiTypeInput--btn MultiTypeInput--FIXED multiButtonForFixedType"
                        data-testid="multi-type-button"
                      >
                        <span
                          class="bp3-icon StyledProps--main"
                          data-icon="fixed-input"
                        >
                          <svg
                            height="12"
                            viewBox="0 0 9 9"
                            width="12"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                              fill="currentColor"
                            />
                          </svg>
                        </span>
                      </button>
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
